mongo-c-driver 1.0.2
====================

It is my pleasure to announce to you the 1.0.2 release of the MongoDB C driver.

This release is a minor point release with no ABI changes and mostly small
bugfixes.

Changes include:
 * A variety of fixes for read preference based node selection
 * Avoided inclusion of getLastError in 2.6 writeConcern
 * Correct handling of pass through params for collection_aggregate
 * Improved error reporting in socket connect
 * Public MONGOC_DEFAULT_CONNECTTIMEOUTMS

Thanks to everyone who contributed to the development of this point release for
libmongoc.

 * Adam Midvidy
 * Christian Hergert
 * Denis Gladkikh
 * Jason Carey
 * Jeremy Mikola
 * Jérôme Lebel
 * Tyler Brock
 * Wisdom Omuya

-- Jason Carey

mongo-c-driver 1.0.0
====================

It is my very distinct pleasure to announce to you the 1.0 release of
the MongoDB C driver!

This is the culmination of just over a year of work and could not have
been done without the help of our wonderful community.

Thanks to everyone who contributed to the development of this driver!

 * Christian Hergert
 * Jason Carey
 * Gary Murakami
 * Christian Heckl
 * Frank Watson Song
 * Hannes Magnusson
 * Jérôme Lebel
 * Kyle Suarez
 * Maga Napanga
 * Michael Kuhn
 * Vincent Giersch
 * essentia44
 * yuqing

Happy Hacking!

-- Christian Hergert


mongo-c-driver 0.98.2
=====================

One final step before our journey to 1.0!

This is a relatively small release, adding some features needed for drivers
building on top of the C driver.

A new libmongoc-priv.so library is installed that does not have symbols
hidden. You can access private headers via the -private.h variants. This
means you will need to recompile your project every time the library is
changed (if you use those private headers, as they are subject to change).

A special thanks to Hannes Magnusson for patches in this release.

See `git shortlog 0.98.0..0.98.2` for a list of all the changes.

-- Christian Hergert

